# mosyle-to-cloudflare-zerotrust-sync

./: Dockerfile  README.md
app/: cloudflare_client.py  main.py  mosyle_client.py  pyproject.toml
app/config/: configuration.toml  logging.config
